--- a/build.gradle
+++ b/build.gradle
@@ -23,4 +23,7 @@ dependencies {
     compile group: 'org.mindrot', name: 'jbcrypt', version: '0.4'
     compile 'io.jsonwebtoken:jjwt-api:0.10.7'
     runtime 'io.jsonwebtoken:jjwt-impl:0.10.7','io.jsonwebtoken:jjwt-jackson:0.10.7'
+    // https://mvnrepository.com/artifact/io.springfox/springfox-swagger2
+    compile 'io.springfox:springfox-swagger2:2.6.1'
+    compile 'io.springfox:springfox-swagger-ui:2.6.1'
 }
